--- a/home.html
+++ b/home.html
@@ -102,11 +102,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Ciao,
-            mi chiamo Alessandro Bevilacqua e sono attualmente uno studente di informatica presso l'università degli studi
-            di Bari. Programmare è sempre stata una mia passione e personalmente ritengo che possa essere considerata
-            una vera e propria forma d'arte fatta di logica e problem solving. Non appena terminati gli studi il mio obiettivo
-            sarà quello di cimentarmi in questo settore lavorativo.</p>
+          <p>Hi, my name is Alessandro Bevilacqua and I'm currently a computer science student at the University of Bari. Programming has always been a passion of mine and I personally believe it can be considered a real art form made up of logic and problem solving . As soon as I finish my studies, my goal will be to try my hand in this sector of work.</p>
           <br><br><br>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
@@ -145,7 +141,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>"Fare il debugging è come essere il detective in un film giallo in cui tu sei anche l'assassino."</p>
+          <p>"Debugging is like being the detective in a crime movie where you are also the murderer."</p>
         </div>
 
         <div class="row skills-content">
@@ -260,56 +256,59 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Diploma di scuola secondaria di secondo grado</h4>
+              <h4><b>High School Diploma</b></h4>
               <h5>2016-2021</h5>
-              <p><em>Indirizzo: Informatica e telecomunicazioni, articolazione informatica</em></p>
-              <p>Scuola: ITCG "Manlio Capitolo", Tursi (MT)</p>
-              <p>Voto: 97/100</p>
+              <p><em>Course: IT(information technology) and telecommunications</em></p>
+              <p>School: ITCG "Manlio Capitolo", Tursi (MT)</p>
+              <p>Grade: 97/100</p>
             </div>
 
             <div class="resume-item">
-              <h6><b>Certificato CISCO IT ESSENTIALS</b></h6>
+              <h7><b>CISCO IT Essentials certificate</b></h7>
+              <br>
               <a href="https://www.netacad.com/courses/os-it/it-essentials" target="_blank">Sito Web del corso</a>
             </div>
 
 
             <div class="resume-item">
-              <h6><b>Certificato CISCO di imprenditorialità digitale</b></h6>
+              <h7><b> CISCO digital entrepreneurship certificate</b></h7>
+              <br>
               <a href="https://ictls.it/formazione/informatica-di-base/cisco-entrepreneurship-imprenditorialita" target="_blank">Sito Web del corso</a>
               </div>
 
 
               <div class="resume-item">
-                <h6><b>Eipass Safer Internet</b></h6>
+                <h7><b>Eipass Safer Internet certificate</b></h7>
+                <br>
                   <a href="https://it.eipass.com/safer-internet-day-corso-eipass-gratuito/" target="_blank">Sito Web del corso</a>
                 </div>
 
               <div class="resume-item">
-                <h6><b>Attività: progetto GreenDuino</b></h6>
-                <p>Realizzazione di una stazione di misurazione della qualità dell'aria sviluppata completamente in Arduino.</p>
+                <h7><b>Activity: GreenDuino project</b></h7>
+                <p>Implementation of an air quality measurement station developed entirely in Arduino.</p>
                 <a href="https://www.itcgtursi.edu.it/articolo/greenduino-monitoraggio-ambientale-al-tempo-dei-maker" target="_blank">Sito Web</a>
                 </div>
 
 
             <div class="resume-item">
-              <h4>Corso di laurea in ITPS (Informatica e tecnologie per la produzione del software) -- Computer Science degree</h4>
-              <h5>2021 - in corso</h5>
-              <p><em>Dipartimento di informatica, Università degli studi di Bari "Aldo Moro"</em></p>
+              <h4><b>Computer Science degree</b></h4>
+              <h5>2021 - ongoing</h5>
+              <p><em>Computer Science Departement, University of Bari "Aldo Moro"</em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Redattore senior</h4>
+              <h4>Senior editor</h4>
               <h5>2017-2020</h5>
               <p><em>www.windowsinsiders.com (ex surface-phone.it)</em></p>
               <ul>
-                <li>Stesura di articoli e approfondimenti inerenti al mondo Microsoft (Xbox, Cloud, Office, Windows,
-                  Surface etc.)</li>
-                  <li>Recensioni di prodotti tech</li>
-                  <li>Moderazione sezione commenti su piattaforma Disqus</li>
-                  <li>Supervisione degli articoli pubblicati</li>
-                  <li>Avvio di diverse collaborazioni con Aukey, Dodocool, EasySMX, Movavi, Surfshark, Kaspersky, IOTrasnfer, EaseUS, Gearbest, Dodocool e molti altri.</li>
+                <li>Drafting of articles and insights related to the Microsoft world (Xbox, Cloud, Office, Windows,
+                  surface etc.)</li>
+                  <li>Tech product reviews</li>
+                  <li>Comment section moderation on Disqus platform</li>
+                  <li>Supervision of published articles</li>
+                  <li>Starting several collaborations with Aukey, Dodocool, EasySMX, Movavi, Surfshark, Kaspersky, IOTrasnfer, EaseUS, Gearbest, Dodocool and many others.</li>
               </ul>
             </div>
             
@@ -317,7 +316,8 @@
         </div>
 
       <div class="wrapper">
-        <a class="button" href="https://1drv.ms/b/s!AvpHrrYA48ec0DuK16c9V4y1U4d3?e=cdV7ve" target="blank">Visualizza CV completo</a>
+        <a class="button" href="https://1drv.ms/b/s!AvpHrrYA48ec0DuK16c9V4y1U4d3?e=cdV7ve" target="blank">View full CV
+        </a>
     </div>    
   </div>
 
@@ -352,9 +352,6 @@
                 <h4>Call:</h4>
                 <p>+39 340 819 6309</p>
               </div>
-              <div class="map-responsive">
-              <iframe width="600" height="400" style="border: 10" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/view?zoom=11&center=41.1171%2C16.8719&key=AIzaSyDxpuN72gDg5JBIFT_BUVX8BE_re_uVmjE"></iframe>
-              </div>
               </div>
     </section><!-- End Contact Section -->
 
@@ -364,7 +361,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>2022</span></strong>
+        &copy; Copyright <strong><span>2023</span></strong>
       </div>
       <div class="credits">
       </div>
