--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi, my name is Alessandro Bevilacqua and I'm currently a computer science student at the University of Bari. Programming has always been a passion of mine and I personally believe it can be considered a real art form made up of logic and problem solving . As soon as I finish my studies, my goal will be to try my hand in this sector of work.</p>
+          <p>Hi, my name is Alessandro Bevilacqua and I am currently a computer science student at the University of Bari. Programming has always been a passion of mine and I personally believe it can be considered a real art form made up of logic and problem solving . As soon as I finish my studies, my goal will be to try my hand in this field of work.</p>
           <br><br><br>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
