--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               </div>
             </div>
             <div class="progress">
-              <span class="skill">JAVA <i class="val">60%</i></span>
+              <span class="skill">JAVA <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -266,34 +266,30 @@
             <div class="resume-item">
               <h7><b>CISCO IT Essentials certificate</b></h7>
               <br>
-              <a href="https://www.netacad.com/courses/os-it/it-essentials" target="_blank">Sito Web del corso</a>
+              <a href="https://www.netacad.com/courses/os-it/it-essentials" target="_blank">Course website</a>
             </div>
 
 
             <div class="resume-item">
               <h7><b> CISCO digital entrepreneurship certificate</b></h7>
               <br>
-              <a href="https://ictls.it/formazione/informatica-di-base/cisco-entrepreneurship-imprenditorialita" target="_blank">Sito Web del corso</a>
+              <a href="https://ictls.it/formazione/informatica-di-base/cisco-entrepreneurship-imprenditorialita" target="_blank">Course website</a>
               </div>
 
 
               <div class="resume-item">
                 <h7><b>Eipass Safer Internet certificate</b></h7>
                 <br>
-                  <a href="https://it.eipass.com/safer-internet-day-corso-eipass-gratuito/" target="_blank">Sito Web del corso</a>
+                  <a href="https://it.eipass.com/safer-internet-day-corso-eipass-gratuito/" target="_blank">Course website</a>
                 </div>
-
-              <div class="resume-item">
-                <h7><b>Activity: GreenDuino project</b></h7>
-                <p>Implementation of an air quality measurement station developed entirely in Arduino.</p>
-                <a href="https://www.itcgtursi.edu.it/articolo/greenduino-monitoraggio-ambientale-al-tempo-dei-maker" target="_blank">Sito Web</a>
-                </div>
-
 
             <div class="resume-item">
               <h4><b>Computer Science degree</b></h4>
               <h5>2021 - ongoing</h5>
-              <p><em>Computer Science Departement, University of Bari "Aldo Moro"</em></p>
+              <div class="stay-close">
+                <img src="assets/img/uniba.png"" style="width:60px;height:60px;">
+                <p><em>Computer Science Departement, University of Bari "Aldo Moro"</em></p>
+              </div>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
