--- a/index.html
+++ b/index.html
@@ -298,13 +298,13 @@
               <h4>Senior editor</h4>
               <h5>2017-2020</h5>
               <p><em>www.windowsinsiders.com (ex surface-phone.it)</em></p>
+              <p>Drafting articles, news and insights pertaining to the Microsoft ecosystem (Xbox, Cloud, Office, Windows, Surface, etc.).</p> 
               <ul>
-                <li>Drafting of articles and insights related to the Microsoft world (Xbox, Cloud, Office, Windows,
-                  surface etc.)</li>
-                  <li>Tech product reviews</li>
-                  <li>Comment section moderation on Disqus platform</li>
-                  <li>Supervision of published articles</li>
-                  <li>Starting several collaborations with Aukey, Dodocool, EasySMX, Movavi, Surfshark, Kaspersky, IOTrasnfer, EaseUS, Gearbest, Dodocool and many others.</li>
+                  <li>Conducting tech product reviews.</li>
+                  <li>Moderating comments on the Disqus platform.</li>
+                  <li>Overseeing the publication of articles.</li>
+                  <li>Initiating multiple collaborations with companies such as Aukey, Dodocool, EasySMX, Movavi, 
+                    Surfshark, Kaspersky, IOTransfer, EaseUS, Gearbest, and many others.</li>
               </ul>
             </div>
             
