--- a/index.html
+++ b/index.html
@@ -332,19 +332,19 @@
         </div>
             <div class="info">
               <div class="address">
-                <i class="bi bi-geo-alt"></i>
+                <a href="https://maps.app.goo.gl/UFyf9K152TGpjqsf6"><i class="bi bi-geo-alt"></i></a>
                 <h4>Location:</h4>
                 <p>Bari, Apulia, Italy</p>
                 </div>
 
               <div class="email">
-                <i class="bi bi-envelope"></i>
+                <a href="mailto: beviale@outlook.it"><i class="bi bi-envelope"></i></a>
                 <h4>Email:</h4>
                 <p>beviale@outlook.it</p>
               </div>
 
               <div class="phone">
-                <i class="bi bi-phone"></i>
+                <a href="tel:3408196309"><i class="bi bi-phone"></i></a>
                 <h4>Call:</h4>
                 <p>+39 340 819 6309</p>
               </div>
