Added bachelor degree

--- a/index.html
+++ b/index.html
@@ -112,16 +112,17 @@
             <h3>Developer</h3>
             <br><br>
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-lg-5">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>03/07/2002</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+39 3408196309</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bari, Apulia, Italy</span></li>
                 </ul>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-5">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Computer science (in progress)</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Bachelor Degree:</strong> <span>Computer Science</span></li>
+                  <li class="text-nowrap"><i class="bi bi-chevron-right"></i> <strong>Master Degree:</strong> <span>Artificial Intelligence (in progress)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>beviale@outlook.it</span></li>
                 </ul>
               </div>
@@ -275,11 +276,20 @@
                 </div>
 
             <div class="resume-item">
-              <h4><b>Computer Science degree</b></h4>
-              <h5>2021 - ongoing</h5>
-              <div class="stay-close">
-                <img src="assets/img/uniba.png"" style="width:60px;height:60px;">
-                <p><em>Computer Science Departement, University of Bari "Aldo Moro"</em></p>
+              <h4><b>Computer Science bachelor degree</b></h4>
+              <h5>2021 - 2024</h5>
+              <div class="stay-close flex-column align-items-start">
+                <p>Mark: 110/110 cum laude</p>
+                <div class="d-flex align-items-center"><img src="assets/img/uniba.png" style="width:60px;height:60px;">
+                <div>Computer Science Departement, University of Bari "Aldo Moro"</div></div>
+              </div>
+            </div>
+            <div class="resume-item">
+              <h4><b>Computer Science (Artificial Intelligence) master degree</b></h4>
+              <h5>2024 - ongoing</h5>
+              <div class="stay-close flex-column align-items-start">
+                <div class="d-flex align-items-center"><img src="assets/img/uniba.png" style="width:60px;height:60px;">
+                <div>Computer Science Departement, University of Bari "Aldo Moro"</div></div>
               </div>
             </div>
           </div>
